# awen

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.zig  vcpkg-configuration.json  vcpkg.json  wrangler.jsonc
.claude/: launch.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/steamos/: Dockerfile  README.md  devcontainer.json
.github/actions/get-qt/: action.yml
.github/actions/get-vcpkg/: action.yml
.github/workflows/: android.yml  coverage.yml  linux.yml  macos.yml  osx.yml  steamos.yml  wasm.yml  web.yml  windows.yml
android/: settings.gradle
app/: CMakeLists.txt
app/awen/: CMakeLists.txt  Main.qml  StressScope.qml  main.cpp  main.lua
app/briarthorn/: CMakeLists.txt  README.md  briarthorn.rc  main.cpp
app/briarthorn/qml/: Main.qml
app/briarthorn/qml/commands/: CommandAbility.qml  CommandSteer.qml  CommandThrottle.qml  Verbs.qml
app/briarthorn/qml/model/: Abilities.qml  Ability.qml  AbilityFlare.qml  AbilityLaunch.qml  AbilitySlot.qml  Classification.qml  Data.qml  DataWeapon.qml  Database.qml  Detonation.qml  Entity.qml  RangeProjection.qml  Side.qml  StoreGame.qml  Track.qml  Weapon.qml  World.qml
app/briarthorn/qml/scenarios/: Scenario.qml  ScenarioDuel.qml
app/briarthorn/qml/systems/: SystemAbility.qml  SystemCountermeasure.qml  SystemDetection.qml  SystemEngage.qml  SystemFuel.qml  SystemMovement.qml  SystemPilot.qml  SystemPursuit.qml  SystemThreat.qml  SystemWeapon.qml
app/briarthorn/qml/themes/: Aurora.qml  Style.qml
app/briarthorn/qml/ui/: EntitySymbol.qml  Joystick.qml  RangeRing.qml  Symbol.qml  SymbolFlare.qml  ViewEngagements.qml  ViewSituation.qml  ViewSituationAttack.qml  ViewStatus.qml  ViewTopBar.qml  ViewTracks.qml
app/briarthorn/src/: Briarthorn.cpp  Briarthorn.hpp  CMakeLists.txt  build.zig  main.cpp
app/briarthorn/src/game/: CMakeLists.txt  Vec2.hpp  build.zig
app/briarthorn/src/game/test/: build.zig
app/briarthorn/src/quick/: Application.cpp  Application.hpp  CMakeLists.txt  GameController.cpp  GameController.hpp  WorldView.cpp  WorldView.hpp
app/briarthorn/src/quick/qml/: Main.qml
app/briarthorn/src/raylib/: build.zig
app/briarthorn/web/: index.html
app/lua/: CMakeLists.txt  Property.ixx  main.cpp  main.lua
cmake/: awen-target.cmake  qt-build-tree-conf.cmake  qt-source.cmake  qt-vcpkg-fixup.cmake
cmake/preset/: vcpkg.json
cmake/preset/compiler/: android-ndk.json  clang.json  emcc.json  gcc-14.json  gcc.json  mingw-gcc.json  msvc.json  visualstudio.json
cmake/preset/config/: binarydir.json  debug.json  ninja.json  release.json  vcpkg.json
cmake/preset/host/: arm64-linux.json  arm64-osx.json  x64-linux.json  x64-windows.json
cmake/preset/platform/: android.json  linux.json  osx.json  steamos.json  wasm.json  web.json  windows.json
cmake/triplets/: arm64-android.cmake  arm64-osx.cmake  wasm32-emscripten.cmake  x64-linux.cmake  x64-windows-release.cmake  x64-windows.cmake
cmake/vcpkg/ports/qtbase/: fix_deploy_windows.patch  port.data.cmake  portfile.cmake  vcpkg.json
cmake/vcpkg/ports/qtbase/cmake/: qt_install_submodule.cmake
cmake/vcpkg/triplets/: arm64-android-release.cmake  arm64-linux-release.cmake  arm64-osx-release.cmake  x64-linux-release.cmake  x64-mingw-dynamic-release.cmake  x64-windows.cmake
cmake/wasm/: awen-shell.js
scripts/: bootstrap-emsdk.bat  bootstrap-emsdk.sh
src/: CMakeLists.txt
src/awen/: CMakeLists.txt
src/awen/app/: App.cpp  App.h  CMakeLists.txt  main.cpp.in
src/awen/buildinfo/: BuildInfo.cpp  BuildInfo.h  CMakeLists.txt  GenerateVersion.cmake  version.h.in
src/awen/command/: CMakeLists.txt  Command.qml  CommandHandler.qml  CommandQueue.qml  Store.qml
src/awen/command/test/: CMakeLists.txt  Command.test.cpp  CommandQueue.test.cpp  Store.test.cpp  main.cpp
src/awen/core/: CMakeLists.txt
src/awen/entity/: CMakeLists.txt  Entity.h  System.qml  SystemGroup.qml  Systems.qml
src/awen/entity/test/: CMakeLists.txt  System.test.cpp  SystemGroup.test.cpp  main.cpp
src/awen/gamepad/: CMakeLists.txt  Gamepad.cpp  Gamepad.h  GamepadBackend.h  GamepadSource.cpp  GamepadStub.cpp  GamepadTranslate.cpp  GamepadTranslate.h
src/awen/gamepad/test/: .clang-tidy  CMakeLists.txt  Gamepad.test.cpp
src/awen/input/: Action.qml  ActionAxis.qml  ActionButton.qml  ActionDigital.qml  ActionKey.qml  Actions.qml  Axis.qml  CMakeLists.txt  TouchScreen.cpp  TouchScreen.h
src/awen/input/test/: Actions.test.cpp  Axis.test.cpp  CMakeLists.txt  main.cpp
src/awen/shapes/: CMakeLists.txt  ShapeArc.qml  ShapeGauge.qml  ShapeLink.qml  ShapePolygon.qml  ShapeReticle.qml  ShapeRing.qml  ShapeSector.qml  ShapeSparkline.qml  ShapeTicks.qml  bearing.js
src/awen/shapes/test/: .clang-tidy  CMakeLists.txt  Harness.h  ShapeArc.test.cpp  ShapeGauge.test.cpp  ShapeLink.test.cpp  ShapePolygon.test.cpp  ShapeRing.test.cpp  ShapeSparkline.test.cpp  ShapeTicks.test.cpp  main.cpp
src/awen/test/: CMakeLists.txt  Test.hpp
src/core/: CMakeLists.txt  Engine.ixx  Module.ixx  Object.ixx
src/core/test/: CMakeLists.txt  Engine.test.cpp  Object.test.cpp
src/raylib/: CMakeLists.txt  Camera.ixx  Events.ixx  Module.ixx  Node.ixx  Rectangle.ixx  Ring.ixx  Text.ixx  TextFPS.ixx  Window.ixx
src/raylib/test/: CMakeLists.txt  Node.test.cpp  Window.test.cpp
zig/: Ctx.zig  emscripten.zig
